# Qt_SecUnionClient

./: CMakeLists.txt  README.md  编译说明.txt
3rd/nano/centos/x64/: libnanomsg.so.5
3rd/nano/kylin/x64/: libnanomsg.so.5
3rd/nano/loongson/x64/: libnanomsg.so.5
3rd/nano/ubuntu/x64/: libnanomsg.so.5
3rd/nano/windows/x64/: nanomsg.lib
3rd/nano/windows/x86/: nanomsg.lib
3rd/qtservice/centos/x64/: libQtSolutions_Service-head.so.1
3rd/qtservice/kylin/x64/: libQtSolutions_Service-head.so.1
3rd/qtservice/loongson/x64/: libQtSolutions_Service-head.so.1
3rd/qtservice/ubuntu/x64/: libQtSolutions_Service-head.so.1
3rd/qtservice/windows/x86/: QtSolutions_Service-head.lib  QtSolutions_Service-headd.lib
3rd/sqlite3/windows/x86/: sqlite3.lib
doc/: 资产管理模块设计.doc
include/: commonDef.h  commonMsgDef.h  config.h  locker.hpp  reqTreadPool.hpp  tThread.hpp
include/msglib/: msglib.h  msglibc.h  msglibs.h
src/: CMakeLists.txt
src/comm/: reqTreadPool.hpp  semer.hpp  tThread.hpp  tools.cpp  tools.h  utf8.c  utils.cpp  utils.h
src/libUnionAgent/: CMakeLists.txt
src/libUnionAgent/src/: buildDataUtils.cpp  buildDataUtils.h  client.cpp  client.h  libUnionAgent.cpp  libUnionAgent.h
src/msglib/: cmd.h  deviceskt.cpp  deviceskt.h  exportc.cpp  exports.cpp  msglibc.hpp  msglibs.cpp  msglibs.hpp  skt.hpp
src/svc/: CMakeLists.txt
src/svc/src/: DataParseEngine.cpp  DataParseEngine.h  InteractiveService.cpp  InteractiveService.h  KeepAliveRunable.cpp  KeepAliveRunable.h  ProgramOperatorRunable.cpp  ProgramOperatorRunable.h  main.cpp  server.cpp  server.h  uniqueMrDatabase.cpp  uniqueMrDatabase.h
src/tray/: CMakeLists.txt
src/tray/Resources/: KUniSecService.qss  uniManagerTray.qrc
src/tray/src/: ActionEngine.h  DataQAction.cpp  DataQAction.h  client.cpp  client.h  main.cpp  processControl.cpp  processControl.h  resource.h  selectFileDialog.cpp  selectFileDialog.h  serviceControl.cpp  serviceControl.h  trayInfoControl.cpp  trayInfoControl.h  uniManagerTray.aps  uniManagerTray.cpp  uniManagerTray.h  uniManagerTray.rc
tests/: CMakeLists.txt
tests/src/: test.cpp
