cmake_minimum_required (VERSION 3.5.0)

project(all)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

if(NOT DEFINED ENV{QTDIR})
	MESSAGE(STATUS "QTDIR environment variable not set. Be sure to set the QTDIR \
	cmake cache variable to the Qt root install location")
endif()

set(QTDIR $ENV{QTDIR} CACHE STRING "Qt install path")
list(APPEND CMAKE_PREFIX_PATH ${QTDIR})

include_directories(${CMAKE_SOURCE_DIR}/.)
include_directories(${CMAKE_SOURCE_DIR}/include)
#include_directories(${CMAKE_SOURCE_DIR}/include/easylogging)
#include_directories(${CMAKE_SOURCE_DIR}/include/json)
#include_directories(${CMAKE_SOURCE_DIR}/include/qtservice)
#include_directories(${CMAKE_SOURCE_DIR}/include/sqlite3)
#include_directories(${CMAKE_SOURCE_DIR}/include/msglib)
if(MSVC)
	link_directories(${CMAKE_SOURCE_DIR}/3rd/qtservice/windows/x86)
	link_directories(${CMAKE_SOURCE_DIR}/3rd/sqlite3/windows/x86)
	link_directories(${CMAKE_SOURCE_DIR}/3rd/nano/windows/x86)
elseif(UNIX)
	if(UBUNTU)
		link_directories(${CMAKE_SOURCE_DIR}/3rd/qtservice/ubuntu/x64)
	        link_directories(${CMAKE_SOURCE_DIR}/3rd/sqlite3/ubuntu/x64)
       		link_directories(${CMAKE_SOURCE_DIR}/3rd/nano/ubuntu/x64)
	elseif(CENTOS)
                link_directories(${CMAKE_SOURCE_DIR}/3rd/qtservice/centos/x64)
                link_directories(${CMAKE_SOURCE_DIR}/3rd/sqlite3/centos/x64)
                link_directories(${CMAKE_SOURCE_DIR}/3rd/nano/centos/x64)
	elseif(LOONGSON)
		link_directories(${CMAKE_SOURCE_DIR}/3rd/qtservice/loongson/x64)
	        link_directories(${CMAKE_SOURCE_DIR}/3rd/sqlite3/loongson/x64)
       		link_directories(${CMAKE_SOURCE_DIR}/3rd/nano/loongson/x64)
	elseif(KYLIN)
		link_directories(${CMAKE_SOURCE_DIR}/3rd/qtservice/kylin/x64)
                link_directories(${CMAKE_SOURCE_DIR}/3rd/sqlite3/kylin/x64)
                link_directories(${CMAKE_SOURCE_DIR}/3rd/nano/kylin/x64)
	endif(UBUNTU)
endif(MSVC)

if(MSVC)
    add_compile_options(/utf-8)
endif()

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath,'$ORIGIN'")

add_subdirectory(src)
add_subdirectory(tests)
